2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: ASSERT_MODES_COPY

	* libpq.c (extract_mode_bits): New static func.
	(ASSERT_MODES_COPY): New macro.
	(pg_lo_creat, pg_lo_open): Use ‘ASSERT_MODES_COPY’.

2011-09-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Assume the system provides <string.h>.

	* libpq.c: #include <string.h> unconditionally.

2011-09-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[gi] Move ‘VREF’ to gi.h; bifurcate on ‘GI_LEVEL_NOT_YET_1_8’.

	* gi.h [GI_LEVEL_NOT_YET_1_8]: Move into
	this preproc conditional the #include <guile/gh.h>.
	(BOOLEANP, EXACTP, NULLP, PAIRP, STRINGP, SYMBOLP, PROCEDUREP)
	(BOOLEAN, NUM_INT, NUM_ULONG, SYMBOL, STRING, BSTRING, CHARACTER)
	(C_INT, VECTOR_LEN, VREF, EQ, CONS, CAR, CDR, SETCAR, SETCDR)
	(EVAL_STRING, APPLY, LISTIFY): Likewise, but also
	add a definition for the case of ‘!GI_LEVEL_NOT_YET_1_8’.
	* libpq.c (VREF): Delete macro.

2011-09-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[gi] Use ‘STRINGP’ more.

	* gi.h (ASSERT_STRING): Use ‘STRINGP’.

2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Don't do "defer/allow ints" for Guile 1.8+.

	* gi.h (GI_LEVEL, GI_LEVEL_NOT_YET_1_8): New #define:s.
	(NOINTS, INTSOK): Define to nothing if for Guile 1.8+.

2011-09-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Fix bug: Special case ‘idquote’ handling of ‘a.*’.

	* postgres-qcons.scm (idquote): If the id has a dot, no array
	notation and the part after the dot is ‘*’, don't double-quote that.

2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Elide macro ‘GH_STONED’.

	* gi.h [!HAVE_GUILE_MODSUP_H] (GH_STONED): Delete macro.
	(PERMANENT): Use ‘scm_permanent_object’.

2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move macro ‘DEFSMOB’ to gi.h.

	* gi.h (DEFSMOB): New macro.
	* libpq.c (init_module DEFSMOB): Delete macro.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>
