@@ -1,5 +1,12 @@
 2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[pq int] Add abstraction: option_as_string
+
+	* libpq.c (option_as_string): New static func.
+	(pg_make_print_options): Use ‘option_as_string’.
+
+2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[pq int] Add abstraction: ASSERT_MODES_COPY
 
 	* libpq.c (extract_mode_bits): New static func.
